--- a/web/index.html
+++ b/web/index.html
@@ -19,19 +19,19 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="計下係壽司郎食左幾多錢💰">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_application_1">
+  <meta name="apple-mobile-web-app-title" content="壽司郎計算機🧮">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_application_1</title>
-  <link rel="manifest" href="manifest.json" crossorigin="use-credentials" >
+  <title>壽司郎計算機🧮</title>
+  <link rel="manifest" hre盤f="manifest.json" crossorigin="use-credentials" >
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
